practice/alt3-v1/13-Task-NetworkPolicy/update-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cherry-control
spec:
  podSelector:
    matchLabels:
      app: pit

  policyTypes:
    - Egress
  
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: stem
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
